# Fox-Tracer

./: CMakeLists.txt  README.md
Shaders/: compute.sh  compute.shader  fragment.sh  fragment.shader  fragmentQuad.shader  raytracing.glsl  shader.fs  shader.vs  vertex.sh  vertex.shader  vertexQuad.shader
cmake/Modules/: findglew.cmake
includes/: BBox.cpp  BBox.h  BvhNode.h  Shader.h  ShaderProgram.h  bbox.h  bvhnode.h  bvhtree.h  camera.h  errorChecking.h  filesystem.h  flatBvhNode.h  flatbvhnode.h  framework.h  init.h  kdtree.h  light.h  main.h  matrixCalculator.h  mesh.h  model.h  root_directory.h  shader.h  shaderprogram.h  stb_image.h  vectorCalculator.h  vectorcalculator.h
includes/glm/: CMakeLists.txt
includes/glm/detail/: type_quat.hpp  type_vec4.inl
includes/glm/ext/: matrix_clip_space.inl
includes/glm/gtc/: quaternion.inl
model/: CornellBox-Original.mtl  bunny.mtl  bunny2.mtl  cube.mtl  cubeplane.mtl  cubeplane2.mtl  sphere.mtl  vertices.txt
src/: BBox.cpp  BvhNode.cpp  IndexBuffer.cpp  IndexBuffer.h  Light.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  bbox.cpp  bvhnode.cpp  camera.cpp  flatBvhNode.cpp  flatbvhnode.cpp  init.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  shader.fs  shader2.cpp  shader2.h  shaderprogram.cpp
